--- a/index.html
+++ b/index.html
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>My First GitHub Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Redline</title>
+  <style>
+    body {
+      background-color: #121212;
+      color: #ffffff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 20px;
+    }
+
+    h1 {
+      margin-bottom: 30px;
+      font-size: 2.5em;
+      letter-spacing: 1px;
+    }
+
+    .button {
+      background-color: #1f1f1f;
+      color: white;
+      padding: 15px 25px;
+      margin: 10px;
+      border: 2px solid white;
+      border-radius: 8px;
+      text-decoration: none;
+      font-size: 1em;
+      width: 80%;
+      max-width: 400px;
+      text-align: center;
+      transition: all 0.3s ease;
+    }
+
+    .button:hover {
+      background-color: white;
+      color: #121212;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello World</h1>
-  <p>Website ini aktif dari GitHub Pages!</p>
+  <h1>Redline</h1>
+  <a href="https://www.instagram.com/valclsths?igsh=MWg5bnUwMWduOG9qbw==" class="button" target="_blank">📷 Instagram</a>
+  <a href="https://wa.me/6282219053780" class="button" target="_blank">💬 WhatsApp</a>
+  <a href="https://tokopedia.com/redline" class="button" target="_blank">🛒 Tokopedia</a>
 </body>
 </html>
-
-
-
-first commit
