--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
     <a href="https://tokopedia.com/redline" target="_blank">
       <i class="fas fa-store icon"></i> Tokopedia
     </a>
+    <a href="https://shopee.com/redline" target="_blank">
+      <i class="fas fa-store icon"></i> shopee
+    </a>
+    <a href="https://tiktok.com/redline" target="_blank">
+      <i class="fas fa-store icon"></i> tiktok
+    </a>
   </div>
 </body>
 </html>
