--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
       <i class="fas fa-store icon"></i> Tokopedia
     </a>
     <a href="https://shopee.com/redline" target="_blank">
-      <i class="fas fa-store icon"></i> shopee
+      <i class="fas fa-store icon"></i> Shopee
     </a>
     <a href="https://tiktok.com/redline" target="_blank">
-      <i class="fas fa-store icon"></i> tiktok
+      <i class="fas fa-store icon"></i> Tiktok
     </a>
   </div>
 </body>
