--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   </style>
 </head>
 <body>
-  <img class="logo" src="1000008303.png" alt="Redline Motorsports Logo">
+  <img class="logo" src="logo.png" alt="Redline Motorsports Logo">
   <h1>Redline</h1>
   <p>Motorsports & Lifestyle</p>
   <div class="links">
