--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
   </style>
 </head>
 <body>
-  <img class="logo" src="logo.png" alt="Redline Motorsports Logo">
+  <img src="logo.png" alt="Logo" style="width:200px; margin-bottom: 10px;">
+
   <h1>Redline</h1>
   <p>Motorsports & Lifestyle</p>
   <div class="links">
