--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     .logo {
       width: 280px;
       max-width: 90%;
-      margin-bottom: 25px;
+      margin-bottom: 10px;
       filter: drop-shadow(0 0 20px #ff0033cc);
       animation: fadeInDown 1.2s ease-out forwards;
       opacity: 0;
@@ -129,8 +129,8 @@
     <a href="https://wa.me/082219053780" target="_blank">
       <i class="fab fa-whatsapp icon"></i> WhatsApp
     </a>
-    <a href="https://tokopedia.com/redline" target="_blank">
-      <i class="fas fa-store icon"></i> Tokopedia
+    <a href="https://www.google.com/maps?q=Redline+Motorsports" target="_blank">
+  <i class="fas fa-map-marker-alt icon"></i> Google Maps
     </a>
     <a href="https://shopee.com/redline" target="_blank">
       <i class="fas fa-store icon"></i> Shopee
