--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   </style>
 </head>
 <body>
-  <img src="logo.png" alt="redline" class="logo">
+  <img src="redline.png" alt="redline" class="logo">
 
   <h1>Redline</h1>
   <p>Motorsports & Lifestyle</p>
