--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
     <a href="https://www.instagram.com/valclsths?igsh=MWg5bnUwMWduOG9qbw==" target="_blank">
       <i class="fab fa-instagram icon"></i> Instagram
     </a>
-    <a href="https://wa.me/082219053780" target="_blank">
+    <a href="https://wa.me/0811 8114 0810" target="_blank">
       <i class="fab fa-whatsapp icon"></i> WhatsApp
     </a>
-    <a href="https://www.google.com/maps?q=Redline+Motorsports" target="_blank">
+    <a href="https://www.google.com/https://maps.app.goo.gl/hgniW6Y3qFUSTmLz7=Redline+Motorsports" target="_blank">
   <i class="fas fa-map-marker-alt icon"></i> Google Maps
     </a>
     <a href="https://shopee.com/redline" target="_blank">
