--- a/index.html
+++ b/index.html
@@ -122,15 +122,33 @@
 
   <h1>Redline</h1>
   <p>Motorsports & Lifestyle</p>
+  <media (max-width: 500px) {
+  h1 {
+    font-size: 2.2em;
+  }
+}
+
+.links a {
+  width: 80%;
+  font-size: 0.95em;
+}
+
+<style>
+</style>
+
+<div>
+  <img src="redline.png" alt="redline" class="logo">
+  <h1>Redline</h1>
+  <p>Motorsport & Lifestyle</p>
   <div class="links">
-    <a href="https://www.instagram.com/valclsths?igsh=MWg5bnUwMWduOG9qbw==" target="_blank">
+    <a href="https://www.instagram.com/valclsths?igsh=M" target="_blank">
       <i class="fab fa-instagram icon"></i> Instagram
     </a>
-    <a href="https://wa.me/0811 8114 0810" target="_blank">
+    <a href="https://wa.me/081110810810" target="_blank">
       <i class="fab fa-whatsapp icon"></i> WhatsApp
     </a>
-    <a href="https://www.google.com/https://maps.app.goo.gl/hgniW6Y3qFUSTmLz7=Redline+Motorsports" target="_blank">
-  <i class="fas fa-map-marker-alt icon"></i> Google Maps
+    <a href="https://www.google.com/maps/place/Jl.+Raya+No.123,+Your+City" target="_blank">
+      <i class="fas fa-map-marker-alt icon"></i> Google Maps
     </a>
     <a href="https://shopee.com/redline" target="_blank">
       <i class="fas fa-store icon"></i> Shopee
@@ -138,6 +156,8 @@
     <a href="https://tiktok.com/redline" target="_blank">
       <i class="fab fa-tiktok icon"></i> TikTok
     </a>
+    <a href="index.html" target="_self">
+      <i class="fas fa-home icon"></i> Home
+    </a>
   </div>
-</body>
-</html>
+</div>
