--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
   <h1>Redline</h1>
   <p>Motorsport & Lifestyle</p>
   <div class="links">
-    <a href="https://www.instagram.com/valclsths?igsh=M" target="_blank">
+    <a href="https://www.instagram.com/=M" target="_blank">
       <i class="fab fa-instagram icon"></i> Instagram
     </a>
     <a href="https://wa.me/081110810810" target="_blank">
       <i class="fab fa-whatsapp icon"></i> WhatsApp
     </a>
-    <a href="https://www.google.com/maps/place/Jl.+Raya+No.123,+Your+City" target="_blank">
+    <a href="https://maps.app.goo.gl/S7EJ6QYKCxfP5xg99" target="_blank">
       <i class="fas fa-map-marker-alt icon"></i> Google Maps
     </a>
     <a href="https://shopee.com/redline" target="_blank">
