--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <a href="https://wa.me/081110810810" target="_blank">
       <i class="fab fa-whatsapp icon"></i> WhatsApp
     </a>
-    <a href="https://maps.app.goo.gl/S7EJ6QYKCxfP5xg99" target="_blank">
+    <a href="https://maps.app.goo.gl/7CfRj9ZRTu2RK6hp8" target="_blank">
       <i class="fas fa-map-marker-alt icon"></i> Google Maps
     </a>
     <a href="https://shopee.com/redline" target="_blank">
