--- a/index.html
+++ b/index.html
@@ -105,24 +105,7 @@
       }
     }
 
-    @media (max-width: 500px) {
-      h1 {
-        font-size: 2.2em;
-      }
-
-      .links a {
-        width: 80%;
-        font-size: 0.95em;
-      }
-    }
-  </style>
-</head>
-<body>
-  <img src="redline.png" alt="redline" class="logo">
-
-  <h1>Redline</h1>
-  <p>Motorsports & Lifestyle</p>
-  <media (max-width: 500px) {
+    <media (max-width: 500px) {
   h1 {
     font-size: 2.2em;
   }
@@ -141,13 +124,13 @@
   <h1>Redline</h1>
   <p>Motorsport & Lifestyle</p>
   <div class="links">
-    <a href="https://www.instagram.com/=M" target="_blank">
+    <a href="https://www.instagram.com/valclsths?igsh=M" target="_blank">
       <i class="fab fa-instagram icon"></i> Instagram
     </a>
     <a href="https://wa.me/081110810810" target="_blank">
       <i class="fab fa-whatsapp icon"></i> WhatsApp
     </a>
-    <a href="https://www.google.com/https://maps.app.goo.gl/7CfRj9ZRTu2RK6hp8" target="_blank">
+    <a href="https://www.google.com/maps/place/Jl.+Raya+No.123,+Your+City" target="_blank">
       <i class="fas fa-map-marker-alt icon"></i> Google Maps
     </a>
     <a href="https://shopee.com/redline" target="_blank">
