--- a/index.html
+++ b/index.html
@@ -1,146 +1,78 @@
-<!DOCTYPE html>
+      <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Redline | Motorsport</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Montserrat&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redline Motorsport & Lifestyle</title>
   <style>
-    * {
-      box-sizing: border-box;
+    body {
+      background-color: #1a1a1a;
+      color: #fff;
+      font-family: Arial, sans-serif;
+      text-align: center;
       margin: 0;
       padding: 0;
     }
-
-    body {
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(-45deg, #0f0f0f, #1a1a1a, #000000, #1f1f1f);
-      background-size: 400% 400%;
-      animation: gradientShift 15s ease infinite;
-      color: #fff;
+    .logo {
+      max-width: 100%;
+      height: auto;
+    }
+    h1 {
+      font-size: 2.2em;
+      color: #ff0000;
+    }
+    p {
+      font-size: 1.2em;
+      color: #ccc;
+    }
+    .links {
       display: flex;
       flex-direction: column;
       align-items: center;
-      text-align: center;
-      min-height: 100vh;
-      justify-content: center;
-      padding: 40px 20px;
+      gap: 10px;
+      padding: 20px;
     }
-
-    @keyframes gradientShift {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .logo {
-      width: 280px;
-      max-width: 90%;
-      margin-bottom: 10px;
-      filter: drop-shadow(0 0 20px #ff0033cc);
-      animation: fadeInDown 1.2s ease-out forwards;
-      opacity: 0;
-    }
-
-    h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 3em;
-      margin: 10px 0;
-      color: #ff0033;
-      text-shadow: 0 0 15px #ff0033aa;
-      animation: fadeIn 1.6s ease forwards;
-      opacity: 0;
-    }
-
-    p {
-      font-size: 1.2em;
-      margin-bottom: 30px;
-      color: #ccc;
-      animation: fadeIn 2s ease forwards;
-      opacity: 0;
-    }
-
     .links a {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 12px;
+      width: 80%;
+      padding: 15px;
+      background-color: #ff0000;
+      color: #fff;
       text-decoration: none;
-      background-color: #ff0033;
-      color: white;
-      padding: 14px 24px;
-      border-radius: 30px;
-      width: 260px;
-      margin: 10px auto;
-      font-weight: 600;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 20px rgba(255, 0, 51, 0.4);
-      animation: fadeIn 2.4s ease forwards;
-      opacity: 0;
+      border-radius: 25px;
+      font-size: 0.95em;
+      transition: background-color 0.3s;
     }
-
     .links a:hover {
-      background-color: #e6002f;
-      transform: translateY(-3px) scale(1.03);
-      box-shadow: 0 6px 25px rgba(255, 0, 51, 0.6);
+      background-color: #cc0000;
     }
-
-    .icon {
-      font-size: 1.2em;
+    .links i {
+      margin-right: 10px;
     }
-
-    @keyframes fadeIn {
-      to { opacity: 1; }
-    }
-
-    @keyframes fadeInDown {
-      from {
-        opacity: 0;
-        transform: translateY(-30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    <media (max-width: 500px) {
-  h1 {
-    font-size: 2.2em;
-  }
-}
-
-.links a {
-  width: 80%;
-  font-size: 0.95em;
-}
-
-<style>
-</style>
-
-<div>
-  <img src="redline.png" alt="redline" class="logo">
+  </style>
+</head>
+<body>
+  <img src="redline.png" alt="Redline Logo" class="logo">
   <h1>Redline</h1>
   <p>Motorsport & Lifestyle</p>
   <div class="links">
     <a href="https://www.instagram.com/valclsths?igsh=M" target="_blank">
-      <i class="fab fa-instagram icon"></i> Instagram
+      <i class="fab fa-instagram"></i> Instagram
     </a>
-    <a href="https://wa.me/081110810810" target="_blank">
-      <i class="fab fa-whatsapp icon"></i> WhatsApp
+    <a href="https://wa.me/6281110810810" target="_blank">
+      <i class="fab fa-whatsapp"></i> WhatsApp
     </a>
     <a href="https://www.google.com/maps/place/Jl.+Raya+No.123,+Your+City" target="_blank">
-      <i class="fas fa-map-marker-alt icon"></i> Google Maps
+      <i class="fas fa-map-marker-alt"></i> Google Maps
     </a>
     <a href="https://shopee.com/redline" target="_blank">
-      <i class="fas fa-store icon"></i> Shopee
+      <i class="fas fa-store"></i> Shopee
     </a>
     <a href="https://tiktok.com/redline" target="_blank">
-      <i class="fab fa-tiktok icon"></i> TikTok
+      <i class="fab fa-tiktok"></i> TikTok
     </a>
     <a href="index.html" target="_self">
-      <i class="fas fa-home icon"></i> Home
+      <i class="fas fa-home"></i> Home
     </a>
   </div>
-</div>
+</body>
+</html>
