--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <h1>Redline</h1>
   <p>Motorsport & Lifestyle</p>
   <div class="links">
-    <a href="https://www.instagram.com/valclsths?igsh=M" target="_blank">
+    <a href="https://www.instagram.com/redlinemotorsportberau?igsh=ZmV2YmZ1a3Y1OXl2" target="_blank">
       <i class="fab fa-instagram"></i> Instagram
     </a>
     <a href="https://wa.me/081110810810" target="_blank">
